# web-server

./: .gitignore  Cargo.toml  README.md
collector/: Cargo.toml
collector/src/: data_collector.rs  errors.rs  main.rs  sender.rs
server/: Cargo.toml  collection.db-shm  collection.db-wal
server/migrations/: 20240912195022_initial.sql
server/src/: api.rs  collector.rs  commands.rs  main.rs  web.rs
shared/: Cargo.toml
shared/src/: lib.rs
