[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.29.2", features = ["apple-app-store"] }
shared = { path = "../shared" }
thiserror = "1.0.63"
# uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[profile.release]
opt-level = "z"
strip = true      # Automatically strip symbols
lto = true
codegen-units = 1
panic = "abort"