[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
tokio = { version = "1.40.0", features = ["full"] }
shared = { path = "../shared" }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = "1.10.0"
dotenv = "0.15.0"
axum = "0.6.18"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
